--- a/metadata.yaml
+++ b/metadata.yaml
@@ -24,5 +24,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcc 'D501'
 - !lcsh 'World War, 1914-1918 -- Causes'
+- GITenberg
 title: The Myth of a Guilty Nation
 url: http://www.gutenberg.org/ebooks/44508
